--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <a href="/acheter.docx" download="filename">Download link</a>
+
   <button class="show-modal">Show modal 1</button>
   <button class="show-modal">Show modal 2</button>
   <button class="show-modal">Show modal 3</button>
