--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <a href="/acheter.docx" download="filename">Download link</a>
+  <a href="../acheter.docx" download="filename">Download link</a>
 
   <button class="show-modal">Show modal 1</button>
   <button class="show-modal">Show modal 2</button>
